-- WARNING: This schema is for context only and is not meant to be run.
-- Table order and constraints may not be valid for execution.

CREATE TABLE public.allocation_ledger (
  id uuid NOT NULL DEFAULT gen_random_uuid(),
  tenant_id uuid NOT NULL,
  donation_id uuid,
  campaign_id uuid,
  event_type text NOT NULL CHECK (event_type = ANY (ARRAY['allocation_created'::text, 'allocation_adjusted'::text, 'expense_posted'::text, 'restriction_released'::text])),
  category text NOT NULL,
  amount numeric NOT NULL CHECK (amount <> 0::numeric),
  notes text,
  source text NOT NULL DEFAULT 'system'::text,
  occurred_at timestamp with time zone NOT NULL DEFAULT timezone('utc'::text, now()),
  created_at timestamp with time zone NOT NULL DEFAULT timezone('utc'::text, now()),
  CONSTRAINT allocation_ledger_pkey PRIMARY KEY (id),
  CONSTRAINT allocation_ledger_tenant_id_fkey FOREIGN KEY (tenant_id) REFERENCES public.tenants(id),
  CONSTRAINT allocation_ledger_donation_id_fkey FOREIGN KEY (donation_id) REFERENCES public.donations(id),
  CONSTRAINT allocation_ledger_campaign_id_fkey FOREIGN KEY (campaign_id) REFERENCES public.campaigns(id)
);
CREATE TABLE public.audit_logs (
  id uuid NOT NULL DEFAULT gen_random_uuid(),
  tenant_id uuid NOT NULL,
  actor_user_id uuid,
  actor_email text,
  action text NOT NULL,
  target_type text,
  target_id text,
  metadata jsonb NOT NULL DEFAULT '{}'::jsonb,
  created_at timestamp with time zone NOT NULL DEFAULT timezone('utc'::text, now()),
  CONSTRAINT audit_logs_pkey PRIMARY KEY (id),
  CONSTRAINT audit_logs_tenant_id_fkey FOREIGN KEY (tenant_id) REFERENCES public.tenants(id),
  CONSTRAINT audit_logs_actor_user_id_fkey FOREIGN KEY (actor_user_id) REFERENCES auth.users(id)
);
CREATE TABLE public.campaign_updates (
  id uuid NOT NULL DEFAULT gen_random_uuid(),
  tenant_id uuid NOT NULL,
  campaign_id uuid NOT NULL,
  title text NOT NULL,
  content text NOT NULL,
  image_url text,
  published_at timestamp with time zone NOT NULL DEFAULT timezone('utc'::text, now()),
  created_at timestamp with time zone NOT NULL DEFAULT timezone('utc'::text, now()),
  CONSTRAINT campaign_updates_pkey PRIMARY KEY (id),
  CONSTRAINT campaign_updates_tenant_id_fkey FOREIGN KEY (tenant_id) REFERENCES public.tenants(id),
  CONSTRAINT campaign_updates_campaign_id_fkey FOREIGN KEY (campaign_id) REFERENCES public.campaigns(id)
);
CREATE TABLE public.campaigns (
  id uuid NOT NULL DEFAULT gen_random_uuid(),
  tenant_id uuid NOT NULL,
  title text NOT NULL,
  description text,
  category text NOT NULL,
  location text NOT NULL,
  image_url text,
  goal_amount numeric NOT NULL CHECK (goal_amount > 0::numeric),
  currency text NOT NULL DEFAULT 'INR'::text,
  status USER-DEFINED NOT NULL DEFAULT 'planning'::campaign_status,
  urgency USER-DEFINED NOT NULL DEFAULT 'medium'::urgency_level,
  starts_at timestamp with time zone,
  ends_at timestamp with time zone,
  created_at timestamp with time zone NOT NULL DEFAULT timezone('utc'::text, now()),
  updated_at timestamp with time zone NOT NULL DEFAULT timezone('utc'::text, now()),
  CONSTRAINT campaigns_pkey PRIMARY KEY (id),
  CONSTRAINT campaigns_tenant_id_fkey FOREIGN KEY (tenant_id) REFERENCES public.tenants(id)
);
CREATE TABLE public.donation_ledger (
  id uuid NOT NULL DEFAULT gen_random_uuid(),
  tenant_id uuid NOT NULL,
  donation_id uuid,
  donor_id uuid,
  campaign_id uuid,
  event_type text NOT NULL CHECK (event_type = ANY (ARRAY['donation_created'::text, 'donation_confirmed'::text, 'donation_failed'::text, 'donation_refunded'::text, 'donation_disputed'::text])),
  amount numeric NOT NULL,
  currency text NOT NULL DEFAULT 'INR'::text,
  stripe_event_id text,
  stripe_checkout_session_id text,
  stripe_payment_intent_id text,
  stripe_charge_id text,
  source text NOT NULL CHECK (source = ANY (ARRAY['checkout_api'::text, 'stripe_webhook'::text, 'razorpay_webhook'::text, 'admin_action'::text])),
  metadata jsonb NOT NULL DEFAULT '{}'::jsonb,
  occurred_at timestamp with time zone NOT NULL DEFAULT timezone('utc'::text, now()),
  created_at timestamp with time zone NOT NULL DEFAULT timezone('utc'::text, now()),
  provider_event_id text,
  provider_order_id text,
  provider_payment_id text,
  CONSTRAINT donation_ledger_pkey PRIMARY KEY (id),
  CONSTRAINT donation_ledger_tenant_id_fkey FOREIGN KEY (tenant_id) REFERENCES public.tenants(id),
  CONSTRAINT donation_ledger_donation_id_fkey FOREIGN KEY (donation_id) REFERENCES public.donations(id),
  CONSTRAINT donation_ledger_donor_id_fkey FOREIGN KEY (donor_id) REFERENCES public.donors(id),
  CONSTRAINT donation_ledger_campaign_id_fkey FOREIGN KEY (campaign_id) REFERENCES public.campaigns(id)
);
CREATE TABLE public.donations (
  id uuid NOT NULL DEFAULT gen_random_uuid(),
  tenant_id uuid NOT NULL,
  donor_id uuid,
  campaign_id uuid,
  amount numeric NOT NULL CHECK (amount > 0::numeric),
  currency text NOT NULL DEFAULT 'INR'::text,
  status USER-DEFINED NOT NULL DEFAULT 'pending'::donation_status,
  payment_method text,
  is_recurring boolean NOT NULL DEFAULT false,
  donor_name text,
  donor_email text,
  stripe_checkout_session_id text,
  stripe_payment_intent_id text,
  stripe_charge_id text,
  source text NOT NULL DEFAULT 'web'::text,
  donated_at timestamp with time zone NOT NULL DEFAULT timezone('utc'::text, now()),
  created_at timestamp with time zone NOT NULL DEFAULT timezone('utc'::text, now()),
  receipt_url text,
  failure_reason text,
  refunded_amount numeric NOT NULL DEFAULT 0 CHECK (refunded_amount >= 0::numeric),
  dispute_status text NOT NULL DEFAULT 'none'::text CHECK (dispute_status = ANY (ARRAY['none'::text, 'warning_needs_response'::text, 'warning_under_review'::text, 'warning_closed'::text, 'needs_response'::text, 'under_review'::text, 'won'::text, 'lost'::text])),
  stripe_event_last_id text,
  stripe_customer_id text,
  updated_at timestamp with time zone NOT NULL DEFAULT timezone('utc'::text, now()),
  razorpay_order_id text,
  razorpay_payment_id text,
  razorpay_signature text,
  payment_provider text NOT NULL DEFAULT 'razorpay'::text CHECK (payment_provider = ANY (ARRAY['razorpay'::text, 'stripe'::text])),
  provider_event_last_id text,
  CONSTRAINT donations_pkey PRIMARY KEY (id),
  CONSTRAINT donations_tenant_id_fkey FOREIGN KEY (tenant_id) REFERENCES public.tenants(id),
  CONSTRAINT donations_donor_id_fkey FOREIGN KEY (donor_id) REFERENCES public.donors(id),
  CONSTRAINT donations_campaign_id_fkey FOREIGN KEY (campaign_id) REFERENCES public.campaigns(id)
);
CREATE TABLE public.donors (
  id uuid NOT NULL DEFAULT gen_random_uuid(),
  tenant_id uuid NOT NULL,
  auth_user_id uuid,
  full_name text NOT NULL,
  email text NOT NULL,
  phone text,
  is_anonymous boolean NOT NULL DEFAULT false,
  communications_opt_in boolean NOT NULL DEFAULT true,
  created_at timestamp with time zone NOT NULL DEFAULT timezone('utc'::text, now()),
  updated_at timestamp with time zone NOT NULL DEFAULT timezone('utc'::text, now()),
  CONSTRAINT donors_pkey PRIMARY KEY (id),
  CONSTRAINT donors_tenant_id_fkey FOREIGN KEY (tenant_id) REFERENCES public.tenants(id),
  CONSTRAINT donors_auth_user_id_fkey FOREIGN KEY (auth_user_id) REFERENCES auth.users(id)
);
CREATE TABLE public.expenses (
  id uuid NOT NULL DEFAULT gen_random_uuid(),
  tenant_id uuid NOT NULL,
  campaign_id uuid,
  allocation_id uuid,
  category text NOT NULL,
  vendor text,
  amount numeric NOT NULL CHECK (amount > 0::numeric),
  currency text NOT NULL DEFAULT 'INR'::text,
  status USER-DEFINED NOT NULL DEFAULT 'draft'::expense_status,
  receipt_url text,
  notes text,
  submitted_by uuid,
  approved_by uuid,
  expense_date date NOT NULL DEFAULT CURRENT_DATE,
  created_at timestamp with time zone NOT NULL DEFAULT timezone('utc'::text, now()),
  updated_at timestamp with time zone NOT NULL DEFAULT timezone('utc'::text, now()),
  CONSTRAINT expenses_pkey PRIMARY KEY (id),
  CONSTRAINT expenses_tenant_id_fkey FOREIGN KEY (tenant_id) REFERENCES public.tenants(id),
  CONSTRAINT expenses_campaign_id_fkey FOREIGN KEY (campaign_id) REFERENCES public.campaigns(id),
  CONSTRAINT expenses_allocation_id_fkey FOREIGN KEY (allocation_id) REFERENCES public.allocation_ledger(id),
  CONSTRAINT expenses_submitted_by_fkey FOREIGN KEY (submitted_by) REFERENCES auth.users(id),
  CONSTRAINT expenses_approved_by_fkey FOREIGN KEY (approved_by) REFERENCES auth.users(id)
);
CREATE TABLE public.field_reports (
  id uuid NOT NULL DEFAULT gen_random_uuid(),
  tenant_id uuid NOT NULL,
  assignment_id uuid,
  volunteer_id uuid,
  impact_metric integer,
  notes text,
  attachment_url text,
  status text NOT NULL DEFAULT 'submitted'::text CHECK (status = ANY (ARRAY['submitted'::text, 'reviewed'::text, 'returned'::text])),
  submitted_at timestamp with time zone NOT NULL DEFAULT timezone('utc'::text, now()),
  created_at timestamp with time zone NOT NULL DEFAULT timezone('utc'::text, now()),
  CONSTRAINT field_reports_pkey PRIMARY KEY (id),
  CONSTRAINT field_reports_tenant_id_fkey FOREIGN KEY (tenant_id) REFERENCES public.tenants(id),
  CONSTRAINT field_reports_assignment_id_fkey FOREIGN KEY (assignment_id) REFERENCES public.volunteer_assignments(id),
  CONSTRAINT field_reports_volunteer_id_fkey FOREIGN KEY (volunteer_id) REFERENCES public.volunteer_profiles(id)
);
CREATE TABLE public.payment_webhook_events (
  id uuid NOT NULL DEFAULT gen_random_uuid(),
  tenant_id uuid,
  provider text NOT NULL CHECK (provider = ANY (ARRAY['razorpay'::text, 'stripe'::text])),
  event_key text NOT NULL,
  event_type text NOT NULL,
  status text NOT NULL DEFAULT 'received'::text CHECK (status = ANY (ARRAY['received'::text, 'processed'::text, 'ignored'::text, 'failed'::text])),
  error_message text,
  payload jsonb NOT NULL,
  received_at timestamp with time zone NOT NULL DEFAULT timezone('utc'::text, now()),
  processed_at timestamp with time zone,
  CONSTRAINT payment_webhook_events_pkey PRIMARY KEY (id),
  CONSTRAINT payment_webhook_events_tenant_id_fkey FOREIGN KEY (tenant_id) REFERENCES public.tenants(id)
);
CREATE TABLE public.profiles (
  id uuid NOT NULL,
  full_name text,
  email text UNIQUE,
  phone text,
  created_at timestamp with time zone NOT NULL DEFAULT timezone('utc'::text, now()),
  updated_at timestamp with time zone NOT NULL DEFAULT timezone('utc'::text, now()),
  CONSTRAINT profiles_pkey PRIMARY KEY (id),
  CONSTRAINT profiles_id_fkey FOREIGN KEY (id) REFERENCES auth.users(id)
);
CREATE TABLE public.stripe_webhook_events (
  id uuid NOT NULL DEFAULT gen_random_uuid(),
  tenant_id uuid,
  event_id text NOT NULL UNIQUE,
  event_type text NOT NULL,
  api_version text,
  livemode boolean NOT NULL DEFAULT false,
  status text NOT NULL DEFAULT 'received'::text CHECK (status = ANY (ARRAY['received'::text, 'processed'::text, 'ignored'::text, 'failed'::text])),
  error_message text,
  payload jsonb NOT NULL,
  received_at timestamp with time zone NOT NULL DEFAULT timezone('utc'::text, now()),
  processed_at timestamp with time zone,
  CONSTRAINT stripe_webhook_events_pkey PRIMARY KEY (id),
  CONSTRAINT stripe_webhook_events_tenant_id_fkey FOREIGN KEY (tenant_id) REFERENCES public.tenants(id)
);
CREATE TABLE public.tenant_memberships (
  id uuid NOT NULL DEFAULT gen_random_uuid(),
  tenant_id uuid NOT NULL,
  user_id uuid NOT NULL,
  role text NOT NULL CHECK (role = ANY (ARRAY['donor'::text, 'volunteer'::text, 'org_admin'::text])),
  created_at timestamp with time zone NOT NULL DEFAULT timezone('utc'::text, now()),
  CONSTRAINT tenant_memberships_pkey PRIMARY KEY (id),
  CONSTRAINT tenant_memberships_tenant_id_fkey FOREIGN KEY (tenant_id) REFERENCES public.tenants(id),
  CONSTRAINT tenant_memberships_user_id_fkey FOREIGN KEY (user_id) REFERENCES auth.users(id)
);
CREATE TABLE public.tenants (
  id uuid NOT NULL DEFAULT gen_random_uuid(),
  slug text NOT NULL UNIQUE CHECK (slug ~ '^[a-z0-9-]+$'::text),
  name text NOT NULL,
  country_code text,
  timezone text DEFAULT 'Asia/Kolkata'::text,
  created_at timestamp with time zone NOT NULL DEFAULT timezone('utc'::text, now()),
  updated_at timestamp with time zone NOT NULL DEFAULT timezone('utc'::text, now()),
  CONSTRAINT tenants_pkey PRIMARY KEY (id)
);
CREATE TABLE public.volunteer_assignments (
  id uuid NOT NULL DEFAULT gen_random_uuid(),
  tenant_id uuid NOT NULL,
  campaign_id uuid,
  volunteer_id uuid NOT NULL,
  title text NOT NULL,
  location text NOT NULL,
  priority USER-DEFINED NOT NULL DEFAULT 'medium'::urgency_level,
  status USER-DEFINED NOT NULL DEFAULT 'assigned'::assignment_status,
  assignment_type text NOT NULL,
  starts_at timestamp with time zone,
  due_at timestamp with time zone,
  created_at timestamp with time zone NOT NULL DEFAULT timezone('utc'::text, now()),
  updated_at timestamp with time zone NOT NULL DEFAULT timezone('utc'::text, now()),
  CONSTRAINT volunteer_assignments_pkey PRIMARY KEY (id),
  CONSTRAINT volunteer_assignments_tenant_id_fkey FOREIGN KEY (tenant_id) REFERENCES public.tenants(id),
  CONSTRAINT volunteer_assignments_campaign_id_fkey FOREIGN KEY (campaign_id) REFERENCES public.campaigns(id),
  CONSTRAINT volunteer_assignments_volunteer_id_fkey FOREIGN KEY (volunteer_id) REFERENCES public.volunteer_profiles(id)
);
CREATE TABLE public.volunteer_profiles (
  id uuid NOT NULL DEFAULT gen_random_uuid(),
  tenant_id uuid NOT NULL,
  auth_user_id uuid,
  full_name text NOT NULL,
  email text NOT NULL,
  certifications_count integer NOT NULL DEFAULT 0,
  hours_logged integer NOT NULL DEFAULT 0,
  impact_score integer NOT NULL DEFAULT 0,
  created_at timestamp with time zone NOT NULL DEFAULT timezone('utc'::text, now()),
  updated_at timestamp with time zone NOT NULL DEFAULT timezone('utc'::text, now()),
  CONSTRAINT volunteer_profiles_pkey PRIMARY KEY (id),
  CONSTRAINT volunteer_profiles_tenant_id_fkey FOREIGN KEY (tenant_id) REFERENCES public.tenants(id),
  CONSTRAINT volunteer_profiles_auth_user_id_fkey FOREIGN KEY (auth_user_id) REFERENCES auth.users(id)
);