erDiagram
  TENANTS ||--o{ TENANT_MEMBERSHIPS : has
  TENANTS ||--o{ DONORS : has
  TENANTS ||--o{ CAMPAIGNS : has
  TENANTS ||--o{ DONATIONS : has
  TENANTS ||--o{ VOLUNTEER_PROFILES : has
  TENANTS ||--o{ VOLUNTEER_ASSIGNMENTS : has
  TENANTS ||--o{ FIELD_REPORTS : has
  TENANTS ||--o{ EXPENSES : has
  TENANTS ||--o{ DONATION_LEDGER : has
  TENANTS ||--o{ ALLOCATION_LEDGER : has
  TENANTS ||--o{ AUDIT_LOGS : has
  TENANTS ||--o{ PAYMENT_WEBHOOK_EVENTS : has

  DONORS ||--o{ DONATIONS : makes
  CAMPAIGNS ||--o{ DONATIONS : receives
  DONATIONS ||--o{ DONATION_LEDGER : emits
  CAMPAIGNS ||--o{ CAMPAIGN_UPDATES : posts

  VOLUNTEER_PROFILES ||--o{ VOLUNTEER_ASSIGNMENTS : receives
  VOLUNTEER_ASSIGNMENTS ||--o{ FIELD_REPORTS : produces
  CAMPAIGNS ||--o{ VOLUNTEER_ASSIGNMENTS : includes

  ALLOCATION_LEDGER ||--o{ EXPENSES : funds
  CAMPAIGNS ||--o{ EXPENSES : spends
